# zgame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  \  copy_assets.cmake  logger.cpp  logger.hpp  main.cpp  shell.nix  zgame.kdev4
.kdev4/: zgame.kdev4
inc/: .gitignore  Application.hpp  AssetManager.hpp  EmptyScene.hpp  Entity.hpp  Scene.hpp  SceneManager.hpp  Settings.hpp  input_manager.hpp  logger.hpp  string.hpp
inc/Components/: BoxCollider.hpp  CircleCollider.hpp  Collider2D.hpp  Component.hpp  PhysicsObject2D.hpp  PolygonCollider.hpp  Transform.hpp
inc/Systems/: CollisionManager2D.hpp  PhysicsManager2D.hpp
opengl/include/glad/: glad.h
opengl/src/: glad.c
src/: Application.cpp  AssetManager.cpp  EmptyScene.cpp  Scene.cpp  SceneManager.cpp  input_manager.cpp  logger.cpp  string.cpp
src/Components/: BoxCollider.cpp  CircleCollider.cpp
src/Systems/: .CollisionManager2D.cpp.swp  CollisionManager2D.cpp  PhysicsManager2D.cpp
zgame/res/: frag.glsl  other.glsl  vert.glsl
zgame/src/: assetmanager.cpp  assetmanager.hpp  camera.cpp  camera.hpp  collision.hpp  ecs.cpp  ecs.hpp  game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  glheader.hpp  input.cpp  input.hpp  lighting.hpp  logger.cpp  logger.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  obj.cpp  obj.hpp  packedlist.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  stb_image.h  transform.hpp  triangle.cpp  triangle.hpp  types.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
